@startuml

frame "core" {

    package "pruefung" {

        class AccessValidator
        class EMailValidator
        class LengthValidator
        class Mod11Verfahren
        class Mod10Verfahren
        class LuhnVerfahren
        class NoopVerfahren
        class NullValidator
        class NumberValidator
        class TelefonnummerValidator

        package "exception" {
            class ValidationException
            class LocalizedValidationException
            class IllegalLengthException
            class InvalidValueException
            class NullValueException
            class PruefzifferException
        }

    }

}

LuhnVerfahren <|-- Mod10Verfahren

LocalizedValidationException -up-|> ValidationException
LocalizedValidationException <|-- IllegalLengthException
LocalizedValidationException <|-- InvalidValueException
LocalizedValidationException <|-- NullValueException
LocalizedValidationException <|-- PruefzifferException

@enduml
